--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-input-mask": "^3.0.0-alpha.2",
     "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
