--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-input-mask": "^3.0.0-alpha.2",
     "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
@@ -17,6 +16,7 @@
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.4.2",
+    "cssnano": "^4.1.10",
     "postcss": "^7.0.27",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
